src/plugins/picklists/sfdx-source/objects/Vehicle__c/Vehicle__c.object-meta.xml
<CustomObject>
    <label>Vehicle</label>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>