src/plugins/picklists/sfdx-source/objects/Vehicle__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
                <label>Navigation System</label>
            </value>
            <value>
                <fullName>Media</fullName>
                <label>Media System</label>
            </value>
            <value>
                <fullName>CD</fullName>
                <label>Compact Disk</label>
            </value>
            <value>
                <fullName>Tape</fullName>
                <label>Tape Deck</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>