src/plugins/picklists/sfdx-source/objects/Vehicle__c/fields/Gears__c.field-meta.xml
<CustomField>
    <fullName>Gears__c</fullName>
    <label>Gears</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Transmission__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>VehicleGears</valueSetName>
    </valueSet>
</CustomField>