src/plugins/picklists/sfdx-source/objects/Vehicle__c/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <label>Transmission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VehicleTransmission</valueSetName>
    </valueSet>
</CustomField>